# dynamoquery

./: .coveragerc  .isort.cfg  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg  vulture_whitelist.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: on_push_coverage.yml
docs/: MODULES.md  README.md  _config.yml
docs/dynamo_query/: base_dynamo_query.md  data_table.md  dynamo_autoscaler.md  dynamo_query_main.md  dynamo_query_types.md  dynamo_table.md  dynamo_table_index.md  enums.md  expressions.md  index.md  json_tools.md  lazy_logger.md  module.md  sentinel.md  utils.md
docs/dynamo_query/dictclasses/: decorators.md  dictclass.md  dynamo_dictclass.md  index.md  loose_dictclass.md
dynamoquery/: __init__.py  base_dynamoquery.py  data_table.py  dynamo_autoscaler.py  dynamo_table.py  dynamo_table_index.py  dynamoquery_main.py  expressions.py
dynamoquery/dictclasses/: dictclass.py  dynamo_dictclass.py  loose_dictclass.py
examples/: data_table_example.py  dynamo_table_example.py  dynamoquery_example.py
scripts/: before_commit.sh  docs.sh
tests/: test_data_table.py  test_dynamo_autoscaler.py  test_dynamo_table.py  test_dynamo_table_index.py  test_dynamoquery_main.py  test_expressions.py  test_json_tools.py  test_sentinel.py  test_utils.py
tests/dictclasses/: test_dynamo_dictclass.py  test_loose_dictclass.py
tests/integration/: test_dynamo_table.py
