[metadata]
name = dynamoquery
version = 2.11.1
description = A Pythonic ORM for AWS DynamoDB
author = Amir Kavousian
author_email = kav.amir@gmail.com
url = https://github.com/amirkav/dynamoquery
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = keep-a-changelog, ci, automation
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
project_urls =
    Source = https://github.com/amirkav/dynamoquery
    Tracker = https://github.com/amirkav/dynamoquery/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    botocore


[options.package_data]
logchange =
    py.typed

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,test_*.py,.cache
ignore = E203,W503,E501
max-complexity = 14

[mypy]
python_version = 3.8
warn_return_any = False
warn_unused_ignores = False
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
ignore_errors = False

[mypy-tests.*]
ignore_errors = True
